--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -22,7 +22,7 @@
           Final Year Project
         </p>
 
-        <p mat-list-item>
+        <p (click)="gotopage('query-management')" mat-list-item>
           <mat-icon class="i" matPrefix>contact_support</mat-icon>
           Student Queries
         </p>
