--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -12,7 +12,7 @@
 
 
       <div *ngIf="user && user=='Admin'" class="lists">
-        <p  (click)="gotopage('admin-dashboard')" mat-list-item>
+        <p (click)="gotopage('admin-dashboard')" mat-list-item>
           <mat-icon class="i" matPrefix>dashboard</mat-icon>
           DASHBOARD
         </p>
@@ -22,7 +22,10 @@
           Final Year Project
         </p>
 
-        <p (click)="gotopage('student-querries')" mat-list-item>
+
+        <p (click)="gotopage('query-management')" mat-list-item>
+
+
           <mat-icon class="i" matPrefix>contact_support</mat-icon>
           Student Queries
         </p>
