--- a/src/app/cordinator-dashboard/cordinator-dashboard.component.html
+++ b/src/app/cordinator-dashboard/cordinator-dashboard.component.html
@@ -1,3 +1,65 @@
 <app-main-nav>
 
+  <app-main-nav>
+    <mat-card class="cardd">
+  
+      <div class="df">
+  
+          <h1 class="h1">
+               Groups Detail
+          </h1>
+      </div>
+  
+      <hr>
+  
+      <div class="pt10">
+  
+         
+          <form>
+              <input #search type="text" class="textbox" placeholder="Search">
+              <input  title="Search" value="GO" type="submit" class="button">
+          </form>
+  
+      </div>
+    <br>
+      <table>
+          <tr>
+  
+  
+              <th class="tablehead">
+                  Project Id
+              </th>
+  
+              <th class="tablehead">
+                  Project Title
+              </th>
+  
+              <th class="tablehead">
+                  Group Leader
+              </th>
+  
+              <th class="tablehead">
+                Supervisor Name
+            </th>
+  
+              <th class="tablehead">
+                  Group Info
+              </th>
+  
+  
+  
+          </tr>
+          <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+  
+          </tr>
+  
+      </table>
+  
+  </mat-card>
+  </app-main-nav>
+  
 </app-main-nav>
