--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -274,7 +274,7 @@
                     {{currentDiv}} Details
                 </h1>
 
-                <button (click)="manage('Staff')" mat-mini-fab>
+                <button (click)="manage('Dashboard')" mat-mini-fab>
                     <mat-icon>home</mat-icon>
                 </button>
 
