--- a/src/app/student-querries/student-querries.component.html
+++ b/src/app/student-querries/student-querries.component.html
@@ -5,8 +5,11 @@
 
     <div style="width: 40%;padding: 20px;" class="card card-2">
       <h1 style="font-weight:bold">Application</h1>
-      <div class="spacing2">
-
+      
+      <div style="padding-top: 1em;">
+        <h4 style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">
+            Template
+        </h4>
       </div>
 
       <input (change)="selectFile($event)" type="file" id="myfile" name="myfile"><br><br>
@@ -21,9 +24,12 @@
 
     <div style="width: 40%;padding: 20px;" class="card card-2">
       <h1 style="font-weight:bold">Certificate</h1>
-      <div class="spacing2">
-
+      <div style="padding-top: 1em;">
+        <h4 style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">
+            Template
+        </h4>
       </div>
+      
       <input (change)="selectFile($event)" type="file" id="myfile" name="myfile"><br><br>
       <div class="text-center">
         <br>
@@ -35,9 +41,12 @@
 
     <div style="width: 87%;padding: 20px;" class="card card-2">
       <h1 style="font-weight:bold">Letter</h1>
-      <div class="spacing2">
-
+      <div style="padding-top: 1em;">
+        <h4 style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">
+            Template
+        </h4>
       </div>
+      
       <input (change)="selectFile($event)" type="file" id="myfile" name="myfile"><br><br>
       <div class="text-center">
         <br>
