--- a/src/app/supervisor-dashboard/supervisor-dashboard.component.html
+++ b/src/app/supervisor-dashboard/supervisor-dashboard.component.html
@@ -47,7 +47,9 @@
               <td></td>
               <td></td>
               <td></td>
-              <td></td>
+              <td>
+                <button   mat-raised-button color="primary">Approve</button>
+              </td>
               
   
           </tr>
