--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -284,7 +284,7 @@
 
             <div class="pt10">
 
-                <button (click)="openDialog('Admin')" color="accent" mat-flat-button>
+                <button (click)="openDialog('Staff')" color="accent" mat-flat-button>
                     <mat-icon>add_circle</mat-icon>
                     ADD NEW
                 </button>
