--- a/src/app/query-management/query-management.component.html
+++ b/src/app/query-management/query-management.component.html
@@ -1,57 +1,62 @@
 <app-main-nav>
     <mat-card class="cardd">
-    <h1 style="font-family:robboto;font-weight: bold;">
-        Queries
-    </h1>
+        <h1 style="font-family:robboto;font-weight: bold;">
+            Queries
+        </h1>
 
-    <div *ngIf="obtainedQuerries" style="padding: 10px;text-align: center;">
+        <div *ngIf="obtainedQuerries" style="padding: 10px;text-align: center;">
 
-        <div 
-            *ngFor="let item of obtainedQuerries">
+            <div *ngFor="let item of obtainedQuerries">
 
-            <table>
-                <tr>
-      
-      
-                    <th class="tablehead">
-                        Query For
-                    </th>
-      
-                    <th class="tablehead">
-                        Query From
-                    </th>
-      
-                    <th class="tablehead">
-                        Document
-                    </th>
-      
-                    <th class="tablehead">
-                        Action
-                    </th>
-      
-      
-      
-                </tr>
-                <tr >
-                    <td> {{item.queryFor}}</td>
-                    <td> {{item.queryFrom}}</td>
+                <table>
+                    <tr>
 
-                    <td><a href="{{item.file}}" target="_blank">
-                        View document
-                    </a></td>
-                    <td>
-                        <button  mat-raised-button color="primary">Approve</button>
-                        <button  mat-raised-button color="warn">Reject</button>
-                    </td>
-                    
-        
-                </tr>
-      
-            </table>
-           
-            
+
+                        <th class="tablehead">
+                            Query For
+                        </th>
+
+                        <th class="tablehead">
+                            Query From
+                        </th>
+
+                        <th class="tablehead">
+                            Document
+                        </th>
+
+                        <th class="tablehead">
+                            Action
+                        </th>
+
+
+
+                    </tr>
+                    <tr>
+                        <td> {{item.queryFor}}</td>
+                        <td> {{item.queryFrom}}</td>
+
+                        <td><a href="{{item.file}}" target="_blank">
+                                View document
+                            </a></td>
+                        <td *ngIf="!item.assignStaff">
+                            <button (click)="assignToStaff(item.docID)" mat-raised-button
+                                color="primary">Approve</button>
+                            <button (click)="reject(item.docID)" mat-raised-button color="warn">Reject</button>
+                        </td>
+
+                        <td *ngIf="item.assignStaff">
+                            <button mat-raised-button color="primary">ASSIGNED</button>
+
+                        </td>
+
+
+                    </tr>
+
+                </table>
+
+
+            </div>
+
         </div>
-
-    </div>
-</mat-card>
+    </mat-card>
 </app-main-nav>
