--- a/src/app/student-dashboard/student-dashboard.component.html
+++ b/src/app/student-dashboard/student-dashboard.component.html
@@ -109,7 +109,7 @@
             <div>
                 <h2
                     style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;position: relative;left: -10px;">
-                    form submitted
+                    Idea submitted
                 </h2>
             </div>
         </div>
@@ -119,10 +119,10 @@
 
             <mat-card>
                 <h1>
-                    Project approved
+                    Idea approved
                 </h1>
                 <p>
-                    Tasks alotion and al is underdevelopemnt
+                    Now You Have To Submit Propoasl.
                 </p>
             </mat-card>
 
