--- a/src/app/evaluator-dashboard/evaluator-dashboard.component.html
+++ b/src/app/evaluator-dashboard/evaluator-dashboard.component.html
@@ -4,7 +4,7 @@
     <div class="df">
 
         <h1 class="h1">
-             Group Detail
+             Evaluation Groups
         </h1>
     </div>
 
@@ -23,35 +23,59 @@
     <table>
         <tr>
 
-
-            <th class="tablehead">
-                Project Id
-            </th>
-
             <th class="tablehead">
                 Project Title
             </th>
 
             <th class="tablehead">
-                Group Leader
-            </th>
+                Member 1
+             </th>
+
+             <th class="tablehead">
+                Member 2
+             </th>
+
+             <th class="tablehead">
+                Member 3
+             </th>
 
             <th class="tablehead">
               Supervisor Name
           </th>
 
             <th class="tablehead">
-                Group Info
+                ACTION
             </th>
 
 
 
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+
+            <td>
+              Uploaded By Student At proposal submission
+            
+            </td>
+
+            <td>
+                1
+            </td>
+
+            <td>
+                2
+            </td>
+            <td>
+              3
+            </td>
+
+            <td>
+                Selected Supervisor 
+            </td>
+
+            <td>
+                <button  mat-raised-button color="primary">Evaluate</button>
+            </td>
+
 
         </tr>
 
