--- a/src/app/student-dashboard/student-dashboard.component.html
+++ b/src/app/student-dashboard/student-dashboard.component.html
@@ -117,13 +117,13 @@
 
         <div *ngIf="!groupformation  && stat" class="cell">
 
-            <mat-card>
+            <mat-card class="card-i">
                 <h1>
                     Idea approved
                 </h1>
-                <p>
+                <h3>
                     Now You Have To Submit Propoasl.
-                </p>
+                </h3>
             </mat-card>
 
         </div>
