--- a/src/app/student-dashboard/student-dashboard.component.scss
+++ b/src/app/student-dashboard/student-dashboard.component.scss
@@ -121,3 +121,26 @@
         height: 180px;
     }
 }
+
+.card-i{
+
+    background: #fff;
+    border-radius: 2px;
+    display: inline-block;
+    min-height: 50px;
+    margin: 1rem;
+    top: 50%;
+    left:50%;
+  transform: translate(-50%, -50%);
+    position: absolute;
+    transition: 1s;
+    width: 350px;
+    text-align: center;
+    box-shadow: 0 5px 8px rgba(0, 0, 0, 0.16), 0 5px 8px rgba(0, 0, 0, 0.23);
+}
+
+.card-i h1{
+    top: 10%;
+    text-align: center;
+    font-weight: bold;
+  }
