--- a/src/app/supervisor-dashboard/supervisor-dashboard.component.html
+++ b/src/app/supervisor-dashboard/supervisor-dashboard.component.html
@@ -4,7 +4,7 @@
         <div class="df">
 
             <h1 class="h1">
-                Groups Detail
+                Project Ideas
             </h1>
         </div>
 
