--- a/src/app/cordinator-dashboard/cordinator-dashboard.component.html
+++ b/src/app/cordinator-dashboard/cordinator-dashboard.component.html
@@ -1,12 +1,12 @@
 <app-main-nav>
 
-  <app-main-nav>
+  
     <mat-card class="cardd">
   
       <div class="df">
   
           <h1 class="h1">
-               Groups Detail
+               Projects Details
           </h1>
       </div>
   
@@ -26,24 +26,30 @@
           <tr>
   
   
-              <th class="tablehead">
-                  Project Id
-              </th>
   
               <th class="tablehead">
                   Project Title
               </th>
   
               <th class="tablehead">
-                  Group Leader
+                  Member 1
               </th>
+
+              
+              <th class="tablehead">
+                Member 2
+            </th>
+            
+            <th class="tablehead">
+                Member 3
+            </th>
   
               <th class="tablehead">
                 Supervisor Name
             </th>
   
               <th class="tablehead">
-                  Group Info
+                  Asign Evaluators
               </th>
   
   
@@ -54,12 +60,14 @@
               <td></td>
               <td></td>
               <td></td>
-  
+              <td></td>
+              <td></td>
+              
           </tr>
   
       </table>
   
   </mat-card>
-  </app-main-nav>
+  
   
 </app-main-nav>
