--- a/src/app/supervisor-dashboard/supervisor-dashboard.component.html
+++ b/src/app/supervisor-dashboard/supervisor-dashboard.component.html
@@ -29,19 +29,15 @@
                 </th>
 
                 <th class="tablehead">
-                    Project ID
+                    Member 1
                 </th>
 
                 <th class="tablehead">
-                    Group member 1
+                    Member 2
                 </th>
 
                 <th class="tablehead">
-                    Group member 2
-                </th>
-
-                <th class="tablehead">
-                    Group member 3
+                    Member 3
                 </th>
 
                 <th class="tablehead">
@@ -58,9 +54,6 @@
                 </td>
 
 
-                <td>
-                    {{item.docID}}
-                </td>
 
                 <td *ngFor="let ite of item.members">
                     {{ite.name}}
