--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -34,12 +34,12 @@
 
       <div *ngIf="user && user=='Coordinator'" class="lists">
         <p mat-list-item>
-          <mat-icon class="i" matPrefix>dashboard</mat-icon>
+          <mat-icon class="i" matPrefix>computer</mat-icon>
           Final Year Projects
         </p>
 
         <p mat-list-item>
-          <mat-icon class="i" matPrefix>dashboard</mat-icon>
+          <mat-icon class="i" matPrefix>person</mat-icon>
           Supervisors
         </p>
 
