--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -110,7 +110,7 @@
 
         <p (click)="gotopage('student-proposal')" mat-list-item>
           <mat-icon class="i" matPrefix>dashboard</mat-icon>
-          Add Proposal
+          Proposal
         </p>
 
         <p (click)="gotopage('student-querries')" mat-list-item>
