--- a/src/app/cordinator-dashboard/cordinator-dashboard.component.html
+++ b/src/app/cordinator-dashboard/cordinator-dashboard.component.html
@@ -49,7 +49,7 @@
             </th>
   
               <th class="tablehead">
-                  Asign Evaluators
+                  Assign Evaluators
               </th>
   
   
@@ -61,7 +61,11 @@
               <td></td>
               <td></td>
               <td></td>
-              <td></td>
+              <td>
+                <button  mat-raised-button color="primary">Proposal</button>
+                <button  mat-raised-button color="accent">Mid</button>
+                <button  mat-raised-button color="warn">Final</button>
+              </td>
               
           </tr>
   
