--- a/src/app/supervision-groups/supervision-groups.component.html
+++ b/src/app/supervision-groups/supervision-groups.component.html
@@ -53,14 +53,14 @@
             </td>
 
             <td>
-                1
+                Zunair  
             </td>
 
             <td>
-                2
+                Huzaifa
             </td>
             <td>
-              3
+                Ali
             </td>
 
             <td>
