--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -17,34 +17,32 @@
           DASHBOARD
         </p>
 
-        <p mat-list-item>
+        <p  (click)="gotopage('admin-dashboard')" mat-list-item>
           <mat-icon class="i" matPrefix>computer</mat-icon>
           Final Year Project
         </p>
 
 
         <p (click)="gotopage('query-management')" mat-list-item>
-
-
           <mat-icon class="i" matPrefix>contact_support</mat-icon>
           Student Queries
         </p>
 
       </div>
 
-      <div *ngIf="user && user=='Coordinator'" class="lists">
-        <p mat-list-item>
+      <div *ngIf="user && user=='Co-ordinator'" class="lists">
+        <p (click)="gotopage('cordinator-dashboard')" mat-list-item>
           <mat-icon class="i" matPrefix>computer</mat-icon>
           Final Year Projects
         </p>
 
         <p mat-list-item>
-          <mat-icon class="i" matPrefix>person</mat-icon>
+          <mat-icon class="i" matPrefix>supervisor_account</mat-icon>
           Supervisors
         </p>
 
         <p mat-list-item>
-          <mat-icon class="i" matPrefix>person</mat-icon>
+          <mat-icon class="i" matPrefix>group_work</mat-icon>
           Evaluators
         </p>
 
@@ -52,6 +50,12 @@
 
 
       <div *ngIf="user && user=='Supervisor'" class="lists">
+
+        <p (click)="gotopage('supervision-groups')" mat-list-item>
+          <mat-icon class="i" matPrefix>dashboard</mat-icon>
+          Supervision Groups
+        </p>
+
         <p (click)="gotopage('supervisor-dashboard')" mat-list-item>
           <mat-icon class="i" matPrefix>dashboard</mat-icon>
           Project Ideas
@@ -60,11 +64,6 @@
         <p (click)="gotopage('project-proposals')" mat-list-item>
           <mat-icon class="i" matPrefix>dashboard</mat-icon>
           Project Proposals
-        </p>
-
-        <p (click)="gotopage('supervision-groups')" mat-list-item>
-          <mat-icon class="i" matPrefix>dashboard</mat-icon>
-          Supervision Groups
         </p>
 
       </div>
