--- a/src/app/cordinator-dashboard/cordinator-dashboard.component.html
+++ b/src/app/cordinator-dashboard/cordinator-dashboard.component.html
@@ -49,22 +49,21 @@
             </th>
   
               <th class="tablehead">
-                  Assign Evaluators
+                  Action
               </th>
   
   
   
           </tr>
           <tr>
+              <td>UIIT Automation</td>
+              <td>Zunair</td>
+              <td>Huzaifa</td>
               <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td>Dr. Kashif</td>
               <td>
-                <button  mat-raised-button color="primary">Proposal</button>
-                <button  mat-raised-button color="accent">Mid</button>
-                <button  mat-raised-button color="warn">Final</button>
+                <button  mat-raised-button color="primary">View Project</button>
+                <button  mat-raised-button color="accent">Evaluators</button>
               </td>
               
           </tr>
