--- a/src/app/supervision-groups/supervision-groups.component.html
+++ b/src/app/supervision-groups/supervision-groups.component.html
@@ -64,7 +64,7 @@
             </td>
 
             <td>
-                <button  mat-raised-button color="primary">Evaluate</button>
+                <button  mat-raised-button color="primary">View</button>
             </td>
 
 
