--- a/src/app/evaluator-dashboard/evaluator-dashboard.component.html
+++ b/src/app/evaluator-dashboard/evaluator-dashboard.component.html
@@ -50,7 +50,7 @@
 
 
         </tr>
-        <tr>
+        <tr class="tr1">
 
             <td>
               Uploaded By Student At proposal submission
@@ -58,23 +58,25 @@
             </td>
 
             <td>
-                1
+                Zunair
             </td>
 
             <td>
-                2
+                Huzaifa
             </td>
             <td>
-              3
+              
             </td>
 
             <td>
-                Selected Supervisor 
+                Dr.Kashif 
             </td>
 
-            <td>
-                <button  mat-raised-button color="primary">Evaluate</button>
-            </td>
+             <td>
+                <a routerLink="/evaluation-groupdetail">
+                    <button  mat-raised-button color="primary">View Group</button>
+                </a>
+            </td> 
 
 
         </tr>
