--- a/src/app/student-dashboard/student-dashboard.component.html
+++ b/src/app/student-dashboard/student-dashboard.component.html
@@ -73,7 +73,7 @@
             </p>
             <mat-form-field class="fieldone" color="primary" appearance="outline">
                 <mat-label style="font-family: Verdana, Geneva, Tahoma, sans-serif;;" class="noto">Provide the complete
-                    project idea dear</mat-label>
+                    project idea</mat-label>
                 <mat-icon matPrefix>lightbulb</mat-icon>
                 <input [(ngModel)]="idea" type="text" matInput placeholder="What is your proj idea?">
 
