--- a/src/app/project-detail/project-detail.component.scss
+++ b/src/app/project-detail/project-detail.component.scss
@@ -240,6 +240,84 @@ table {
     width: 100%;
     border-collapse: collapse;
 }
+.pt{
+
+text-align: center;
+}
+
 .tr1{
-    text-align: center;
+  text-align: center;
+}
+
+.sname{
+  h4{
+    font-size: 16px;
+    font-weight: bold;
+    display: inline;
+  }
+  
+}
+.eval{
+  display: flex;
+  justify-content: space-between;
+  
+}
+
+.start, .mid, .final{
+  h4{
+    display: inline;
+    font-size: 16px;
+    font-weight: bold;
+  }
+}
+
+.table-padding{
+  padding: 0px;
+
+  .mt{
+    border-right: none;
+    border-left: none;
+    border-bottom: none;
+
+    .th1{
+      border-left: none;
+      border-bottom: none;
+      border-top: none;
+
+    }
+
+    .th2{
+      border-right: none;
+      border-bottom: none;
+      border-left: none;
+      border-top: none;
+    }
+
+  }
+}
+
+
+.tablehead{
+  padding: 0px;
+  .mt{
+    border-right: none;
+    border-left: none;
+    border-bottom: none;
+
+    .th1{
+      border-left: none;
+      border-bottom: none;
+
+    }
+
+    .th2{
+      border-right: none;
+      border-bottom: none;
+      border-left: none;
+    }
+
+  }
+}
+.mt1{
+  padding-top: 14px;
 }
