--- a/src/app/student-dashboard/student-dashboard.component.scss
+++ b/src/app/student-dashboard/student-dashboard.component.scss
@@ -1,13 +1,29 @@
 .main {
-    padding: 20px;
-    position: absolute;
-    top: 10%;
+    background: linear-gradient(to right, #516395, #614385);
+    border-radius: 2px;
+    justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+    min-height: 300px;
+    margin: 1rem;
+    position: relative;
+    top: 2em;
+    transition: 1s;
+    width: 97%;
+    
 }
 
 .card {
     position: relative;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-   
+   background: #fff;
+  border-radius: 2px;
+  display: inline-block;
+  min-height: 250px;
+  margin: 1rem;
+  position: relative;
+  transition: 1s;
+  
+  
     
 }
 .center {
