--- a/src/app/supervision-groups/supervision-groups.component.html
+++ b/src/app/supervision-groups/supervision-groups.component.html
@@ -45,7 +45,7 @@
 
           </tr>
 
-          <tr>
+          <tr class="tr1" >
 
             <td>
               Uploaded By Student At proposal submission
@@ -53,7 +53,7 @@
             </td>
 
             <td>
-                Zunair  
+                 Zunair
             </td>
 
             <td>
@@ -64,7 +64,10 @@
             </td>
 
             <td>
-                <button  mat-raised-button color="primary">View</button>
+                <a routerLink="/supervision-groupdetail">
+                    <button  mat-raised-button color="primary">View Group</button>
+                </a>
+                
             </td>
 
 
