--- a/src/app/project-detail/project-detail.component.html
+++ b/src/app/project-detail/project-detail.component.html
@@ -137,8 +137,8 @@
               <table class="mt">
                 
                 <tr>
-                  <td>1</td>
-                  <td>2</td>
+                  <td class="td1" >1</td>
+                  <td class="td2">2</td>
                 </tr>
 
               </table>
@@ -147,8 +147,8 @@
             <table class="mt">
               
               <tr>
-                <td>1</td>
-                <td>2</td>
+                <td class="td1">1</td>
+                <td class="td2">2</td>
               </tr>
 
             </table>
@@ -174,8 +174,8 @@
               <table class="mt">
                 
                 <tr>
-                  <td>1</td>
-                  <td>2</td>
+                  <td class="td1">1</td>
+                  <td class="td2">2</td>
                 </tr>
 
               </table>
@@ -185,8 +185,8 @@
               
               
               <tr>
-                <td>1</td>
-                <td>2</td>
+                <td class="td1">1</td>
+                <td class="td2">2</td>
               </tr>
 
             </table>
@@ -195,8 +195,8 @@
           <table class="mt">
             
             <tr>
-              <td>1</td>
-              <td>2</td>
+              <td class="td1">1</td>
+              <td class="td2">2</td>
             </tr>
 
           </table>
